0031720: Visualization, Font_FontMgr - register one more CJK fallback font available on newer Android devices